--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "framer-motion": "^10.16.4",
     "next": "13.5.6",
     "react": "^18",
+    "react-animated-numbers": "^0.16.0",
     "react-dom": "^18",
+    "react-scroll": "^1.9.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
